# haskell

./: .gitignore  README.md  haskell.code-workspace  hie.yaml  stack.yaml
.devcontainer/: devcontainer.json
.devcontainer/project/: cabal.project
.devcontainer/project/src/: Lis.hs
.stack-work/: stack.sqlite3
project/test/: Spec.hs
src/: Combinations.hs  Countdown.hs  Factorials.hs  Permutations2.hs  Permutations3.hs  Queens.hs  Queens0.hs  Queens2.hs  TempHs.hs  TimedAction.hs  first.hs  haskell.cabal  notebook.ipynb  permutations  permutations.hi  permutations.hs  permutations2.hs  queens.hs  records.hs  records2.hs  records3.hs  records4.hs  src.cabal  stack.yaml
src/app/random/: Webserver1.hs
src/archive/: permutations1.hs
src/jupyter/: common.sh  queens.ipynb  run_haskell  styles.css
src/jupyter/images/: images.md
src/random/: Functions.hs  Large2.hs  LargeListChallenge.hs  Qsort.hs  Webserver1.hs
