cabal-version:      3.0
name:               haskell
version:            0.1.0.0
license:            NONE
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple

executable haskell
    main-is:          random/Webserver1.hs
    build-depends:    base >= 4.7 && < 5,
                      network,
                      network-bsd,
                      time
    default-language: Haskell2010